--- a/Group_Facilitator_Ganesh.ipynb
+++ b/Group_Facilitator_Ganesh.ipynb
@@ -36,7 +36,7 @@
     "id": "80ac80d8"
    },
    "source": [
-    "#### Data Understanding"
+    "# Data Understanding"
    ]
   },
   {
@@ -153,7 +153,7 @@
     "id": "e5b5771e"
    },
    "source": [
-    "#### Data Cleaning and Manipulation"
+    "# Data Cleaning and Manipulation"
    ]
   },
   {
@@ -629,7 +629,7 @@
     "id": "015aef70"
    },
    "source": [
-    "#### Data Analysis"
+    "# Data Analysis"
    ]
   },
   {
@@ -1565,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "ba36a3d5",
+   "id": "7eb34519",
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4528d8f3",
+   "id": "0123b581",
    "metadata": {},
    "source": [
     "Getting purpose count mapping"
@@ -2669,7 +2669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "518cf2f4",
+   "id": "3978cd12",
    "metadata": {},
    "source": [
     "Annual Income vs loan amount"
@@ -2718,7 +2718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b54573c3",
+   "id": "7e693831",
    "metadata": {},
    "source": [
     "Annual Income vs verification status"
@@ -2767,7 +2767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1796cc3d",
+   "id": "edf917dc",
    "metadata": {},
    "source": [
     "Annual Income vs employee length"
