--- a/Group_Facilitator_Ganesh.ipynb
+++ b/Group_Facilitator_Ganesh.ipynb
@@ -1702,7 +1702,7 @@
     "id": "8d51d0de"
    },
    "source": [
-    "Home ownership distribution"
+    "Emploment length distribution"
    ]
   },
   {
